apis/synthetic-bank/open-banking/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tenant-open-banking
  labels:
    banklab.konghq.com/managed-by: gitops
    banklab.konghq.com/platform-layer: synthetic-api
    banklab.konghq.com/environment: lab
    banklab.konghq.com/data-classification: synthetic
    banklab.konghq.com/lifecycle: sandbox
    banklab.konghq.com/auth-profile: none-temporary-goal003-sandbox
    banklab.konghq.com/auth-state: temporary-no-auth
    banklab.konghq.com/goal: goal-003
    banklab.konghq.com/api-domain: open-banking
    banklab.konghq.com/owner: tenant-open-banking-team
    banklab.konghq.com/exposure: external
