apis/synthetic-bank/open-banking/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: banklab-open-banking-api
  namespace: tenant-open-banking
  labels:
    banklab.konghq.com/managed-by: gitops
    banklab.konghq.com/platform-layer: synthetic-api
    banklab.konghq.com/api-domain: open-banking
    banklab.konghq.com/owner: tenant-open-banking-team
    banklab.konghq.com/exposure: external
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: banklab-open-banking-api
  ports:
  - name: http
    port: 80
    targetPort: 8080
