apis/synthetic-bank/open-banking/httproute-external.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: banklab-open-banking
  namespace: tenant-open-banking
  annotations:
    konghq.com/plugins: banklab-jwt,banklab-acl,banklab-rate-limit,banklab-correlation-id
  labels:
    banklab.konghq.com/managed-by: gitops
    banklab.konghq.com/platform-layer: synthetic-api
    banklab.konghq.com/environment: lab
    banklab.konghq.com/data-classification: synthetic
    banklab.konghq.com/lifecycle: sandbox
    banklab.konghq.com/auth-profile: kong-oss-goal004-auth
    banklab.konghq.com/auth-state: authenticated-required
    banklab.konghq.com/authorization-profile: acl-goal004-api-groups
    banklab.konghq.com/rate-limit-profile: goal004-external-redis-3rps
    banklab.konghq.com/goal: goal-004
    banklab.konghq.com/api-domain: open-banking
    banklab.konghq.com/owner: tenant-open-banking-team
    banklab.konghq.com/exposure: external
spec:
  parentRefs:
  - name: kong-external
    namespace: platform-kong
    sectionName: http
  hostnames:
  - api.external.banklab.test
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /open-banking/v1
    backendRefs:
    - name: banklab-open-banking-api
      port: 80
